// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Demande Autre Etoile Envoyee 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <div
      className="bg-success-2 mb-4"
    >
      <div
        className="py-3 flex gap-4 px-4 bg-success-2"
      >
        <span
          className="ri-checkbox-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-success-1"
        />
        <div
          className="flex flex-col gap-3 justify-center"
        >
          <div
            className="text-base font-bold text-success-1"
          >
            Votre demande d’audit a bien été envoyée. Vous recevrez prochainement un mail du Bureau d’Appui.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Demande Etoile 1 Envoyee 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <div
      className="bg-success-2 mb-4"
    >
      <div
        className="py-3 flex gap-4 px-4 bg-success-2"
      >
        <span
          className="ri-checkbox-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-success-1"
        />
        <div
          className="flex flex-col gap-3 justify-center"
        >
          <div
            className="text-base font-bold text-success-1"
          >
            Votre demande de labellisation a bien été envoyée. Vous recevrez dans les 48h ouvrées un mail de l’ADEME.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Etoile 1 CAE 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <fieldset
      className="fr-fieldset"
    >
      <legend
        className="fr-fieldset__legend fr-fieldset__legend--regular"
      >
        Quel type d’audit souhaitez-vous demander ?
      </legend>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={true}
            id="cot"
            onChange={[Function]}
            type="radio"
            value="cot"
          />
          <label
            className="fr-label"
            htmlFor="cot"
          >
            <span>
              Audit COT 
              <b>
                sans
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation_cot"
            onChange={[Function]}
            type="radio"
            value="labellisation_cot"
          />
          <label
            className="fr-label"
            htmlFor="labellisation_cot"
          >
            <span>
              Audit COT 
              <b>
                avec
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation"
            onChange={[Function]}
            type="radio"
            value="labellisation"
          />
          <label
            className="fr-label"
            htmlFor="labellisation"
          >
            <span>
              Audit 
              <b>
                de
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <p
      className="fr-text--sm"
    >
      * Pour passer en CNL penser à joindre les documents de labellisation.
    </p>
    <div
      className=""
    >
      <button
        className="fr-btn"
        data-test="EnvoyerDemandeBtn"
        disabled={false}
        onClick={[Function]}
      >
        Envoyer ma demande
      </button>
      <button
        className="fr-btn fr-btn--secondary fr-ml-4w"
        onClick={[Function]}
      >
        Annuler
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Etoile 1 ECI 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <fieldset
      className="fr-fieldset"
    >
      <legend
        className="fr-fieldset__legend fr-fieldset__legend--regular"
      >
        Quel type d’audit souhaitez-vous demander ?
      </legend>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={true}
            id="cot"
            onChange={[Function]}
            type="radio"
            value="cot"
          />
          <label
            className="fr-label"
            htmlFor="cot"
          >
            <span>
              Audit COT 
              <b>
                sans
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation_cot"
            onChange={[Function]}
            type="radio"
            value="labellisation_cot"
          />
          <label
            className="fr-label"
            htmlFor="labellisation_cot"
          >
            <span>
              Audit COT 
              <b>
                avec
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation"
            onChange={[Function]}
            type="radio"
            value="labellisation"
          />
          <label
            className="fr-label"
            htmlFor="labellisation"
          >
            <span>
              Audit 
              <b>
                de
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <p
      className="fr-text--sm"
    >
      * Pour passer en CNL penser à joindre les documents de labellisation.
    </p>
    <div
      className=""
    >
      <button
        className="fr-btn"
        data-test="EnvoyerDemandeBtn"
        disabled={false}
        onClick={[Function]}
      >
        Envoyer ma demande
      </button>
      <button
        className="fr-btn fr-btn--secondary fr-ml-4w"
        onClick={[Function]}
      >
        Annuler
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Etoile 2 3 4 5 CAE 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <fieldset
      className="fr-fieldset"
    >
      <legend
        className="fr-fieldset__legend fr-fieldset__legend--regular"
      >
        Quel type d’audit souhaitez-vous demander ?
      </legend>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={true}
            id="cot"
            onChange={[Function]}
            type="radio"
            value="cot"
          />
          <label
            className="fr-label"
            htmlFor="cot"
          >
            <span>
              Audit COT 
              <b>
                sans
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation_cot"
            onChange={[Function]}
            type="radio"
            value="labellisation_cot"
          />
          <label
            className="fr-label"
            htmlFor="labellisation_cot"
          >
            <span>
              Audit COT 
              <b>
                avec
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation"
            onChange={[Function]}
            type="radio"
            value="labellisation"
          />
          <label
            className="fr-label"
            htmlFor="labellisation"
          >
            <span>
              Audit 
              <b>
                de
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <p
      className="fr-text--sm"
    >
      * Pour passer en CNL penser à joindre les documents de labellisation.
    </p>
    <div
      className=""
    >
      <button
        className="fr-btn"
        data-test="EnvoyerDemandeBtn"
        disabled={false}
        onClick={[Function]}
      >
        Envoyer ma demande
      </button>
      <button
        className="fr-btn fr-btn--secondary fr-ml-4w"
        onClick={[Function]}
      >
        Annuler
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Etoile 2 3 4 5 CAE Labellisable 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <fieldset
      className="fr-fieldset"
    >
      <legend
        className="fr-fieldset__legend fr-fieldset__legend--regular"
      >
        Quel type d’audit souhaitez-vous demander ?
      </legend>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            id="cot"
            onChange={[Function]}
            type="radio"
            value="cot"
          />
          <label
            className="fr-label"
            htmlFor="cot"
          >
            <span>
              Audit COT 
              <b>
                sans
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={false}
            id="labellisation_cot"
            onChange={[Function]}
            type="radio"
            value="labellisation_cot"
          />
          <label
            className="fr-label"
            htmlFor="labellisation_cot"
          >
            <span>
              Audit COT 
              <b>
                avec
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={false}
            id="labellisation"
            onChange={[Function]}
            type="radio"
            value="labellisation"
          />
          <label
            className="fr-label"
            htmlFor="labellisation"
          >
            <span>
              Audit 
              <b>
                de
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <div
      className="fr-mt-2w"
    >
      <button
        className="fr-btn"
        data-test="EnvoyerDemandeBtn"
        disabled={true}
        onClick={[Function]}
      >
        Envoyer ma demande
      </button>
      <button
        className="fr-btn fr-btn--secondary fr-ml-4w"
        onClick={[Function]}
      >
        Annuler
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Etoile 2 3 4 5 ECI 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <div
      className="bg-warning-2 mb-8"
    >
      <div
        className="py-3 flex gap-4 px-4 bg-warning-2"
      >
        <span
          className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
        />
        <div
          className="flex flex-col gap-3 justify-center"
        >
          <div
            className="text-sm [&_*]:text-sm font-medium text-grey-9 [&_*]:text-grey-9 [&>*]:last:mb-0 flex flex-col gap-3"
          >
            <p>
              Pour cet audit ECi, l’ensemble des tâches déclarées « faites » ou « détaillées » comprenant du « fait » doivent présenter des preuves téléchargées au niveau de la sous-action correspondante dans le référentiel.
               
              <b>
                Aucun auditeur ne pourra être attribué en cas de dossier incomplet.
              </b>
            </p>
            <p>
              Pour rappel, cet audit a un coût qui est aujourd’hui financé par l’ADEME. La validation de votre demande d’audit vous engage à respecter les conditions de complétude.
            </p>
          </div>
        </div>
      </div>
    </div>
    <fieldset
      className="fr-fieldset"
    >
      <legend
        className="fr-fieldset__legend fr-fieldset__legend--regular"
      >
        Quel type d’audit souhaitez-vous demander ?
      </legend>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={true}
            id="cot"
            onChange={[Function]}
            type="radio"
            value="cot"
          />
          <label
            className="fr-label"
            htmlFor="cot"
          >
            <span>
              Audit COT 
              <b>
                sans
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation_cot"
            onChange={[Function]}
            type="radio"
            value="labellisation_cot"
          />
          <label
            className="fr-label"
            htmlFor="labellisation_cot"
          >
            <span>
              Audit COT 
              <b>
                avec
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={true}
            id="labellisation"
            onChange={[Function]}
            type="radio"
            value="labellisation"
          />
          <label
            className="fr-label"
            htmlFor="labellisation"
          >
            <span>
              Audit 
              <b>
                de
              </b>
               labellisation
              <sup>
                *
              </sup>
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <p
      className="fr-text--sm"
    >
      * Pour passer en CNL penser à joindre les documents de labellisation.
    </p>
    <div
      className=""
    >
      <button
        className="fr-btn"
        data-test="EnvoyerDemandeBtn"
        disabled={false}
        onClick={[Function]}
      >
        Envoyer ma demande
      </button>
      <button
        className="fr-btn fr-btn--secondary fr-ml-4w"
        onClick={[Function]}
      >
        Annuler
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots app/pages/collectivite/ParcoursLabellisation/DemandeAuditModal Etoile 2 3 4 5 ECI Labellisable 1`] = `
<div
  className="p-7 flex flex-col"
  data-test="DemandeAuditModal"
>
  <h3>
    Demander un audit
  </h3>
  <div
    className="w-full"
  >
    <div
      className="bg-warning-2 mb-8"
    >
      <div
        className="py-3 flex gap-4 px-4 bg-warning-2"
      >
        <span
          className="ri-information-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] mt-0.5 text-warning-1"
        />
        <div
          className="flex flex-col gap-3 justify-center"
        >
          <div
            className="text-sm [&_*]:text-sm font-medium text-grey-9 [&_*]:text-grey-9 [&>*]:last:mb-0 flex flex-col gap-3"
          >
            <p>
              Pour cet audit ECi, l’ensemble des tâches déclarées « faites » ou « détaillées » comprenant du « fait » doivent présenter des preuves téléchargées au niveau de la sous-action correspondante dans le référentiel.
               
              <b>
                Aucun auditeur ne pourra être attribué en cas de dossier incomplet.
              </b>
            </p>
            <p>
              Pour rappel, cet audit a un coût qui est aujourd’hui financé par l’ADEME. La validation de votre demande d’audit vous engage à respecter les conditions de complétude.
            </p>
          </div>
        </div>
      </div>
    </div>
    <fieldset
      className="fr-fieldset"
    >
      <legend
        className="fr-fieldset__legend fr-fieldset__legend--regular"
      >
        Quel type d’audit souhaitez-vous demander ?
      </legend>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            id="cot"
            onChange={[Function]}
            type="radio"
            value="cot"
          />
          <label
            className="fr-label"
            htmlFor="cot"
          >
            <span>
              Audit COT 
              <b>
                sans
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={false}
            id="labellisation_cot"
            onChange={[Function]}
            type="radio"
            value="labellisation_cot"
          />
          <label
            className="fr-label"
            htmlFor="labellisation_cot"
          >
            <span>
              Audit COT 
              <b>
                avec
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
      <div
        className="fr-fieldset__element"
      >
        <div
          className="fr-radio-group"
        >
          <input
            checked={false}
            disabled={false}
            id="labellisation"
            onChange={[Function]}
            type="radio"
            value="labellisation"
          />
          <label
            className="fr-label"
            htmlFor="labellisation"
          >
            <span>
              Audit 
              <b>
                de
              </b>
               labellisation
            </span>
          </label>
        </div>
      </div>
    </fieldset>
    <div
      className="fr-mt-2w"
    >
      <button
        className="fr-btn"
        data-test="EnvoyerDemandeBtn"
        disabled={true}
        onClick={[Function]}
      >
        Envoyer ma demande
      </button>
      <button
        className="fr-btn fr-btn--secondary fr-ml-4w"
        onClick={[Function]}
      >
        Annuler
      </button>
    </div>
  </div>
</div>
`;
